Updated links for donations to open in new page

--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -31,11 +31,11 @@
       <!-- Donations -->
       <div class="col-md-4 text-md-right donation-buttons">
         <h6 class="text-uppercase mb-4">Support Us</h6>
-        <a href="https://paypal.me/realnakedswedishchef?country.x=SE&locale.x=en_US" class="btn btn-outline-secondary btn-sm social-icon mx-2 mb-1">Donate
+        <a href="https://paypal.me/realnakedswedishchef?country.x=SE&locale.x=en_US" target="_blank" class="btn btn-outline-secondary btn-sm social-icon mx-2 mb-1">Donate
           via
           <img src="/public/images/icons/paypal.svg" alt="Donate via PayPal" width="48" height="48" />
         </a>
-        <a href="https://wise.com/pay/me/pauld4498" class="btn btn-outline-secondary btn-sm social-icon mx-2">Donate via
+        <a href="https://wise.com/pay/me/pauld4498" target="_blank" class="btn btn-outline-secondary btn-sm social-icon mx-2">Donate via
           <img src="/public/images/icons/wise.png" alt="Donate via Wise" width="48" height="48" />
         </a>
       </div>
