--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -78,10 +78,10 @@
 
       <!-- Donation Buttons -->
       <div class="donation-buttons ms-auto">
-        <a href="https://paypal.me/realnakedswedishchef?country.x=SE&locale.x=en_US" class="btn btn-outline-secondary btn-sm mx-2 mb-1">Donate via
+        <a href="https://paypal.me/realnakedswedishchef?country.x=SE&locale.x=en_US" target="_blank" class="btn btn-outline-secondary btn-sm mx-2 mb-1">Donate via
           <img src="/public/images/icons/paypal.svg" alt="Donate via PayPal" width="48" height="48" />
         </a>
-        <a href="https://wise.com/pay/me/pauld4498" class="btn btn-outline-secondary btn-sm mx-2">Donate via
+        <a href="https://wise.com/pay/me/pauld4498" target="_blank" class="btn btn-outline-secondary btn-sm mx-2">Donate via
           <img src="/public/images/icons/wise.png" alt="Donate via Wise" width="48" height="48" />
         </a>
       </div>
